# alpha-crab-moment

./: .gitignore  Cargo.toml  README.md  pre-commit  rust-toolchain.toml
assets/: bnnuy.kra
bevy_include_assets/: Cargo.toml
bevy_include_assets/src/: lib.rs
bnnuy-clicker/: Cargo.toml
bnnuy-clicker/src/: index.html  lib.rs  main.rs
roll-a-ball/: Cargo.toml
roll-a-ball/src/: main.rs  score.rs
