[package]
name = "bnnuy-clicker"
authors = ["Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.8.1", default-features = false, features = ["bevy_asset", "bevy_scene", "bevy_winit", "png", "render", "x11"] }
bevy_rapier2d = "0.17.0"
bevy_include_assets = { path = "../bevy_include_assets" }
rand = "0.8.5"

[features]
default = ["bevy_dyn"]
bevy_dyn = ["bevy/dynamic"]

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.83"
